--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>비비안웨스트우드</title>
+    <title>권희경</title>
 </head>
 <body>
+    <h1>권희경 파일</h1>
+    <p>비비안웨스트우드 메인페이지 시안.</p>
+    <p>github에 올리면 어디에 가든 확인 가능! 핸드폰도 가능!</p>
     <img src="./70_pf/main.jpg" alt="비비안웨스트우드">
 </body>
 </html>
