--- a/03_html/03_요소.html
+++ b/03_html/03_요소.html
@@ -12,7 +12,7 @@
         2.<시작태그>콘텐츠</종료태그>
         <html>내용</html>
         <head>내용</head>
-        <body>내용</body>
+        <body>내용<//body> 여기서오류가남
         <title>웹브라우저 제목표시줄</title>
         <h1>섹션의 제목</h1>
         <h6></h6>
