--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>권희경 파일</h1>
-    <p>비비안웨스트우드 메인페이지 시안입니다.</p>
-    <img src="./70_pf/main.jpg" alt="비비안웨스트우드" width="400">
+    <p>비비안웨스트우드 메인페이지 와이어프레임과 시안입니다.</p>
+    <img src="./70_pf/vivianwestwood/wireframe_vivan.png" alt="비비안웨스트우드 와이어프레임" width="400">
+    <img src="./70_pf/vivianwestwood/index_vivianwestwood.jpg" alt="비비안웨스트우드 메인페이지" width="400">
+    <p>Jeep자동차 SWOT분석과 마인드맵 자료입니다.</p>
+    <img src="./70_pf/jeepcar/swot_jeepcar.png" alt="jeep자동차 SWOT분석" width="400">
+    <img src="./70_pf/jeepcar/mindmap_jeepcar.png" alt="jeep자동차 마인드맵" width="400">
 </body>
 </html>
