--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
 <body>
     <h1>권희경 파일</h1>
     <p>비비안웨스트우드 메인페이지 와이어프레임과 시안입니다.</p>
-    <img src="./70_pf/vivianwestwood/wireframe_vivan.png" alt="비비안웨스트우드 와이어프레임" width="400">
-    <img src="./70_pf/vivianwestwood/index_vivianwestwood.jpg" alt="비비안웨스트우드 메인페이지" width="400">
-    <p>Jeep자동차 SWOT분석과 마인드맵 자료입니다.</p>
-    <img src="./70_pf/jeepcar/swot_jeepcar.png" alt="jeep자동차 SWOT분석" width="400">
-    <img src="./70_pf/jeepcar/mindmap_jeepcar.png" alt="jeep자동차 마인드맵" width="400">
+    <ul>
+        <li>
+            <img src="./70_pf/vivianwestwood/index_vivianwestwood.jpg" alt="비비안웨스트우드 메인페이지" style="width:300px; border: 1px solid #ccc;">
+        </li>
+        <li>
+            <img src="./70_pf/vivianwestwood/wireframe_vivan.png" alt="비비안웨스트우드 와이어프레임" style="width:300px; border: 1px solid #ccc;">
+        </li>
+        <li>
+            <img src="./70_pf/jeepcar/swot_jeepcar.png" alt="jeep자동차 SWOT분석" style="width:300px; border: 1px solid #ccc;">
+        </li>
+        <li>
+            <img src="./70_pf/jeepcar/mindmap_jeepcar.png" alt="jeep자동차 마인드맵" style="width:300px; border: 1px solid #ccc;">
+        </li>
+    </ul>
 </body>
 </html>
