--- a/03_html/메가커피/drink.html
+++ b/03_html/메가커피/drink.html
@@ -21,7 +21,7 @@
             </li>
             <li><a href="#">메뉴소개</a>
                 <ul>
-                    <li><a href="#">음료</a></li>
+                    <li><a href="drink.html">음료</a></li>
                     <li><a href="#">푸드</a></li>
                     <li><a href="#">상품</a></li>
                 </ul>
