--- a/03_html/메가커피/index.html
+++ b/03_html/메가커피/index.html
@@ -36,7 +36,7 @@
             </li>
             <li><a href="#">메뉴소개</a>
                 <ul>
-                    <li><a href="#">음료</a></li>
+                    <li><a href="drink.html">음료</a></li>
                     <li><a href="#">푸드</a></li>
                     <li><a href="#">상품</a></li>
                 </ul>
@@ -50,13 +50,15 @@
     </header>
 
     <!-- section태그 안에는 하나 이상의 제목(h1-h6)이 있어야 한다. -->
+    <!-- 첫 번째 섹션 -->
     <section>
         <h2>슬라이드 이미지: 캐로셀(Carousel)</h2>
     </section>
+    <!-- 두 번째 섹션 -->
     <section>
         <h2>메가MGC커피 봄시즌 신메뉴</h2>
         <h3>
-            <span></span>지친 일상 속, 언제 어디서나</span><br>
+            지친 일상 속, 언제 어디서나<br>
             <span style="background-color: #fff000;">MEGA 에너지 충전!</span>
         </h3>
         <p><b>MEGA LEVEL UP, YOUR ENERGY !</b></p>
@@ -64,8 +66,24 @@
             기분 업! 취향껏 즐길 수 있는 다양한 디저트까지 <br>
             언제 어디서나 메가MGC커피에서 충전하세요.
         </p>
+        <a href="drink.html">메뉴 더보기</a>
     </section>
-    <section><h2>섹션3</h2></section>
+    <!-- 세 번째 섹션 -->
+    <section>
+        <h2>거품 없는 창업비용</h2>
+        <h3>
+            FRANCHISE<br>
+            MEGA MGC<br>
+            <span style="background-color: #ffffff;">COFFEE</span>
+        </h3>
+        <!-- 인라인 요소? span, br, b -->
+         <!-- span: 인라인 요소 그룹핑 -->
+        <p>6,935 만원 <span>(10평 기준)</span></p>
+        <p><b>지금, 메가MGC커피에서 창업성공 스토리를 경험해보세요.</b></p>
+        <p>
+            합리적인 창업비용과 다양한 경험을 바탕으로,<br>다양한 노하우를 전수하여 창업 성공을 약속드립니다.
+        </p>
+    </section>
     <section><h2>섹션4</h2></section>
     <section><h2>섹션5</h2></section>
 
