--- a/04_html+css/04-5_레이아웃_just쇼핑몰.html
+++ b/04_html+css/04-5_레이아웃_just쇼핑몰.html
@@ -8,9 +8,8 @@
     <style>
         /* 전체 */
         * {
-            margin: 0;
+            margin: 0 auto;
         }
-
         body {
             background: #fff;
         }
@@ -20,20 +19,18 @@
             width: 1200px;
             margin: 0 auto;
         }
-
+        
         /* 헤더 */
         header {
             /* 부모 요소에 display:flex;를 적용하면 자식 요소가 가로 배치된다. */
             display: flex;
             height: 100px;
         }
-
         /* 로고 */
         .logo {
             width: 200px;
             background: #eee;
         }
-
         /* 내비게이션 */
         nav {
             width: 1000px;
@@ -51,17 +48,14 @@
             display: flex;
             height: 200px;
         }
-
         .notice {
             width: 400px;
             background: #bbb;
         }
-
         .banner {
             width: 400px;
             background: #aaa;
         }
-
         .shortcut {
             width: 400px;
             background: #999;
@@ -72,17 +66,14 @@
             display: flex;
             height: 100px;
         }
-
         .blogo {
             width: 200px;
             background: #888;
         }
-
         .copy {
             width: 800px;
             background: #777;
         }
-
         .sns {
             width: 200px;
             background: #555;
