--- a/03_html/13_폼입력유형.html
+++ b/03_html/13_폼입력유형.html
@@ -40,8 +40,8 @@
     <!-- 날짜/시간 -->
     <input type="date">
     <!-- datetime-local을 사용하고, datetime은 사용하지 않는다.-->
-    <input type="datetime">
-    <input type="datetime-local"><!-- 모든 브라우저 지원x -->
+    <input type="datetime"><!-- 모든 브라우저 지원x -->
+    <input type="datetime-local"><!-- datetime-local로 대치 -->
     <input type="month"><!-- 파이어폭스 사파리 지원x -->
     <input type="time"><!-- 파이어폭스 사파리 지원x -->
     <input type="week"><!-- 파이어폭스 사파리 지원x -->
@@ -51,6 +51,7 @@
 
     <!-- 범위 -->
     <input type="range">
+    
     <!-- 스핀 버튼 -->
     <input type="number">
 
