--- a/90_test/개발자환경구축_권희경2.html
+++ b/90_test/개발자환경구축_권희경2.html
@@ -45,7 +45,6 @@
         .slide_1 {
             height: 400px;
             background-color: #ccc;
-            margin-bottom: 4px;
 
         }
         
@@ -65,17 +64,16 @@
 
         /* 배너1, 2 */
         .banner_1 {
-            width: 500px;
+            width: 496px;
             height: 250px;
             background-color: #ccc;
-            margin: 4px 4px 0 0;
+            margin-right: 4px;
 
         }
         .banner_2 {
             width: 500px;
             height: 250px;
             background-color: #ccc;
-            margin: 4px 0 0 0;
 
         }
 
@@ -97,10 +95,10 @@
 
         /* 주소 */
         .address {
-            width: 800px;
+            width: 796px;
             height: 100px;
             background-color: #ccc;
-            margin: 4px 4px 4px 0;
+            margin-right: 4px;
 
         }
 
