--- a/03_html/13-2_폼_input.html
+++ b/03_html/13-2_폼_input.html
@@ -1,28 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML</title>
+    <style>
+
+        .button {
+            border-radius:30px;
+            border: 1px solid #000;
+            padding: 8px;
+            background-color: #fff;
+
+        }
+        .button:hover {
+            border-radius: 30px;
+            border: 1px solid #fff;
+            background-color: purple;
+            color: #fff;
+
+        }
+    </style>
 </head>
+
 <body>
-    <form action="#" method="post">
-        <fieldset>
-            <legend>type 속성</legend>
-            <p>아이디 : <input type="text"></p>
-            <p>비밀번호 : <input type="password"></p>
-            <p>이메일 : <input type="email"></p>
-            <p>전화번호 : <input type="tel"></p>
-            <p>컬러선택 : <input type="color"></p>
-            <p>수량 : <input type="search"></p>
-            <p>만족도 : <input type="search"></p>
-            <p>예<input type="radio" name="receive" checked="checked"> 아니오<input type="radio" name="receive"></p>
-            <p>html<input type="checkbox" checked="checked"> CSS<input type="checkbox"></p>
-            <p><input type="submit" value="전송"></p>
-            <p><input type="reset" value="취소"></p>
-            <p><input type="button" value="확인"></p>
-            <p><input type="image" src="../70_pf/jeepcar/images/jeep_black.png" alt="검색"></p>
-        </fieldset>
-    </form>
+    <!-- 검색, 로그인, 회원가입 등 -->
+    아이디: <input type="text"><br>
+    비밀번호: <input type="password"><br>
+    <!-- 사용자에게 노출할 필요가 없는 데이터를 지정할 때 사용한다. -->
+    <input type="hidden"><br>
+
+    검색: <input type="search"><br>
+    URL: <input type="url"><br>
+    전화번호: <input type="tel"><br>
+    이메일: <input type="email"><br>
+
+    관심과목:
+    <!-- checkbox, radio 버튼의 value는 서버로 전송할 데이터 전송 값 -->
+    <!-- checked="checked" 값 입력안해도 똑같아서 checked만 씀 -->
+    <input type="checkbox" name="chkgroup" value="html" checked>HTML
+    <input type="checkbox" name="chkgroup" value="css">CSS <br>
+    <input type="radio" name="radiogrup" value="yes">동의 함<br>
+    <input type="radio" name="radiogrup" value="no">동의 하지 않음<br>
+
+    수량: <input type="number"><br>
+    만족도: <input type="range"><br>
+
+    <!-- 전송: 가입하기, 로그인 ... -->
+    <input type="submit" value="가입하기"><br>
+    <!-- 초기화: 취소, 로그아웃 -->
+    <input type="reset" value="취소하기"><br>
+    <!-- 전송 또는 초기화가 아닌 경우 : 애니메이션, 탭메뉴 -->
+    <input class="button" type="button" value="12월 특별 여행상품">
+    <input class="button" type="button" value="계절별 여행상품">
+    <input class="button" type="button" value="BEST 여행상품"><br>
+    <!-- 버튼을 이미지로 사용하고 싶을 때 -->
+    <input type="image" src="./초기화버튼.png" alt="초기화버튼"><br>
+    <input type="image" src="./로그인.svg" alt="로그인"><br>
+    첨부할 파일: <input type="file"><br>
+
+    <input type="color"><br>
+
+    <input type="date"><br>
+    <input type="datetime-local"><br>
+    <input type="time"><br>
+    <input type="month"><br>
+    <input type="week">
 </body>
+
 </html>
