--- a/70_pf/just/index.html
+++ b/70_pf/just/index.html
@@ -1,50 +1,64 @@
-<html>
+<!DOCTYPE html>
+<html lang="ko">
+
 <head>
-<title>just_draft</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JUST 쇼핑몰</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
-<!-- Save for Web Slices (just_draft.png) -->
-<table id="Table_01" width="1200" height="701" border="0" cellpadding="0" cellspacing="0">
-	<tr>
-		<td>
-			<img src="images/logo.jpg" width="263" height="100" alt=""></td>
-		<td colspan="4">
-			<img src="images/index_02.jpg" width="937" height="100" alt=""></td>
-	</tr>
-	<tr>
-		<td colspan="5">
-			<img src="images/index_03.jpg" width="1200" height="300" alt=""></td>
-	</tr>
-	<tr>
-		<td colspan="2">
-			<img src="images/index_04.jpg" width="400" height="200" alt=""></td>
-		<td>
-			<img src="images/index_05.jpg" width="400" height="200" alt=""></td>
-		<td colspan="2">
-			<img src="images/index_06.jpg" width="400" height="200" alt=""></td>
-	</tr>
-	<tr>
-		<td>
-			<img src="images/index_07.jpg" width="263" height="100" alt=""></td>
-		<td colspan="3">
-			<img src="images/index_08.jpg" width="681" height="100" alt=""></td>
-		<td>
-			<img src="images/index_09.jpg" width="256" height="100" alt=""></td>
-	</tr>
-	<tr>
-		<td>
-			<img src="images/spacer.gif" width="263" height="1" alt=""></td>
-		<td>
-			<img src="images/spacer.gif" width="137" height="1" alt=""></td>
-		<td>
-			<img src="images/spacer.gif" width="400" height="1" alt=""></td>
-		<td>
-			<img src="images/spacer.gif" width="144" height="1" alt=""></td>
-		<td>
-			<img src="images/spacer.gif" width="256" height="1" alt=""></td>
-	</tr>
-</table>
-<!-- End Save for Web Slices -->
+
+<body>
+    <!-- 전체 컨텐츠 가로크기 지정 및 가운데 배치 -->
+    <div class="wrap">
+        <header class="header">
+            <!-- 자격시험의 a태그 링크는 #이다. (임시링크, 현재 페이지의 최상단) -->
+            <h1 class="logo">
+                <a href="#">
+                    <img src="./images/index_01.jpg" alt="로고">
+                </a>
+            </h1>
+            <!-- gnb=global navigation bar : 웹사이트의 모든 페이지에 공통으로 있는 내비게이션 -->
+            <nav class="gnb">
+                <img src="./images/index_02.jpg" alt="내비게이션">
+            </nav>
+        </header>
+        <div class="silde">
+            <a href="#"><img src="./images/index_03.jpg" alt="슬라이드"></a>
+        </div>
+
+        <div class="contents">
+            <div class="notice">
+                <img src="./images/index_04.jpg" alt="공지사항">
+            </div>
+            <div class="banner">
+                <a href="#">
+                    <img src="./images/index_05.jpg" alt="배너">
+                </a>
+            </div>
+            <div class="shortcut">
+                <a href="#">
+                    <img src="./images/index_06.jpg" alt="바로가기">
+                </a>
+            </div>
+        </div>
+
+        <footer class="footer">
+            <div class="blogo">
+                <a href="#">
+                    <img src="./images/index_07.jpg" alt="하단로고">
+                </a>
+            </div>
+            <div class="copy">
+                <img src="./images/index_08.jpg" alt="저작권">
+            </div>
+            <div class="sns">
+                <a href="#">
+                    <img src="./images/index_09.jpg" alt="sns">
+                </a>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
