--- a/04_html+css/03_레이아웃/float/05-2_float.html
+++ b/04_html+css/03_레이아웃/float/05-2_float.html
@@ -8,15 +8,15 @@
             /*
                 바디 안에 있는 내용 = body *
             */
-            body * {
-                outline: 1px solid rgb(9, 170, 63);
-            }
 
-            h1, p, ul {
+
+            h1,
+            p,
+            ul {
                 margin: 0;
             }
 
-            ul {
+            .gallery {
                 /* = list-style-type 개별속성 */
                 /* ul,li 작성 가능 */
                 list-style: none; /* 속기속성 */
@@ -24,16 +24,41 @@
             }
 
             .gallery li {
-                background: yellow;
                 width: 150px;
+                float: left;
+                margin-right: 10px;
                 text-align: center;
+            }
+
+            li p {
+                text-align: justify;
+                word-break: break-all;
+                padding: 10px;
+                font-size: 14px;
+            }
+
+            h3 {
+                padding: 5px;
+            }
+
+            li:nth-of-type(1) h3 {
+                background: #daa;
+            }
+            li:nth-of-type(2) h3 {
+                background: #abc;
+            }
+            li:nth-of-type(3) h3 {
+                background: #eba;
+            }
+            li:nth-of-type(4) h3 {
+                background: #aa7;
             }
         </style>
     </head>
     <body>
         <h1>Lorem, ipsum dolor.</h1>
         <p>
-            Lorem ipsum dolor sit amet.<br>
+            Lorem ipsum dolor sit amet.<br />
             Lorem ipsum dolor sit amet,
             <strong>consectetur</strong> adipisicing.
         </p>
