--- a/04_html+css/02_선택자/p107_자식선택자.html
+++ b/04_html+css/02_선택자/p107_자식선택자.html
@@ -21,10 +21,10 @@
         <p>p는 div의 첫 번째 자식이다.</p>
         <p>p는 div의 두 번째 자식이다.</p>
         <ul>
-            <li><p>p는 첫 번째 li의 자식, div의 손자이다.</p></li>
-            <li><p>p는 두 번째 li의 자식, div의 손자이다.</p></li>
+            <li><p>.abox의 하위(자식x), div의 손자이다.</p></li>
+            <li><p>.abox의 하위(자식x), div의 손자이다.</p></li>
         </ul>
+        <p>.abox의 하위(자식o)</p>
     </div>
-    <p>p는 body의 자식이다.</p>
 </body>
 </html>
