--- a/70_pf/karts/index.html
+++ b/70_pf/karts/index.html
@@ -1,35 +1,164 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>한국종합예술학교</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <header>
-        <h1 class="logo"><a href="#"><img src="images/logo.png" alt="로고"></a></h1>
-        <nav>
-            <ul class="main">
-                <li><a href="#">학교소개</a></li>
-                <li><a href="#">예술사&#47;예술전문사</a></li>
-                <li><a href="#">대학생활</a></li>
-                <li><a href="#">알림&#47;참여</a></li>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>한국종합예술학교</title>
+        <link rel="stylesheet" href="css/style.css" />
+    </head>
+    <body>
+        <header>
+            <h1 class="logo">
+                <a href="#"><img src="images/logo.png" alt="로고" /></a>
+            </h1>
+            <nav>
+                <ul class="main">
+                    <a href="#"><li>학교소개</li></a>
+                    <a href="#"><li>예술사&#47;예술전문사</li></a>
+                    <a href="#"><li>대학생활</li></a>
+                    <a href="#"><li>알림&#47;참여</li></a>
+                </ul>
+            </nav>
+        </header>
+        <div class="slide">
+            <ul>
+                <li>
+                    <a href="#"
+                        ><img src="images/slide1.png" alt="슬라이드이미지1"
+                    /></a>
+                </li>
+                <li>
+                    <a href="#"
+                        ><img src="images/slide2.png" alt="슬라이드이미지2"
+                    /></a>
+                </li>
+                <li>
+                    <a href="#"
+                        ><img src="images/slide3.png" alt="슬라이드이미지3"
+                    /></a>
+                </li>
             </ul>
-        </nav>
-    </header>
-    <div class="slide">
-        <ul>
-            <li><a href="#"><img src="images/slide1.png" alt="슬라이드이미지1"></a></li>
-            <li><a href="#"><img src="images/slide2.png" alt="슬라이드이미지2"></a></li>
-            <li><a href="#"><img src="images/slide3.png" alt="슬라이드이미지3"></a></li>
-        </ul>
-    </div>
-    <div class="contents">
-        <div class="banner"></div>
-        <div class="notice"></div>
-        <div class="gallery"></div>
-    </div>
-    <footer></footer>
-</body>
+        </div>
+        <div class="contents">
+            <div class="link">
+                <a href="#">
+                    <img src="images/link1.png" alt="링크1">
+                    <span>교내전화번호</span>
+                </a>
+                <a href="#">
+                    <img src="images/link2.png" alt="링크2">
+                    <span>오시는 길</span>
+                </a>
+                <a href="#">
+                    <img src="images/link3.png" alt="링크3">
+                    <span>입학정보</span>
+                </a>
+                <a href="#">
+                    <img src="images/link4.png" alt="링크4">
+                    <span>장학금</span>
+                </a>
+                <a href="#">
+                    <img src="images/link5.png" alt="링크5">
+                    <span>학습관리시스템</span>
+                </a>
+            </div>
+
+            <div class="banner">
+                <div class="cont">
+                    <img src="images/banner.png" alt="배너">
+                    <div>
+                        <h2>미래의 고전을 창작하는 한국예술종합학교</h2>
+                        <p>"The Call of Arts", "Journey through Creation" 예술의 부름을 받고 깨어난 예술가의 창조적 여정!</p>
+                    </div>
+                </div>
+                <div class="btn">
+                    <a href="#"><img src="images/button.png" alt="바로가기버튼"></a>
+                </div>
+            </div>
+            
+            <div class="noga">
+                <div class="notice">
+                    <h2>공지사항</h2>
+                    <table>
+                        <tr>
+                            <td><a href="#">제22회 K'ARTS 전국무용경연대회 개최 알림</a></td>
+                            <td>2025.03.18</td>
+                        </tr>
+                        <tr>
+                            <td><a href="#">천장관(기숙사) 휴관 안내</a></td>
+                            <td>2024.11.15</td>
+                        </tr>
+                        <tr>
+                            <td><a href="#">K’ARTS 전국무용경연대회 예선 참가자 유의사항 안내</a></td>
+                            <td>2025.04.24</td>
+                        </tr>
+                        <tr>
+                            <td><a href="#">ISIC 국제학생증 카드 무료 발급 행사 안내</a></td>
+                            <td>2025.05.07</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="gallery">
+                    <h2>갤러리</h2>
+                    <div class="inner">
+                        <a href="#">
+                            <img src="images/gallery1.png" alt="갤러리1"><br>
+                            <span>전통예술원</span>
+                        </a>
+                        <a href="#">
+                            <img src="images/gallery2.png" alt="갤러리2"><br>
+                            <span>무용원</span>
+                        </a>
+                        <a href="#">
+                            <img src="images/gallery3.png" alt="갤러리3"><br>
+                            <span>연극원</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="left">
+                <p>
+                    <b>석관동캠퍼스</b> (02789) 서울특별시 성북구 화랑로32길
+                    146-37 T.02-746-9000
+                </p>
+                <p>
+                    ⓒ 2018 Korea National University of Arts. All rights
+                    reserved.
+                </p>
+            </div>
+            <div class="right">
+                <div class="sns">
+                    <ul>
+                        <li>
+                            <a href="#"
+                                ><i class="fa-brands fa-square-facebook"></i
+                            ></a>
+                        </li>
+                        <li>
+                            <a href="#"
+                                ><i class="fa-brands fa-square-twitter"></i
+                            ></a>
+                        </li>
+                        <li>
+                            <a href="#"
+                                ><i class="fa-brands fa-square-instagram"></i
+                            ></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="fs">
+                    <form action="#">
+                        <select name="fs" id="fs">
+                            <option value="">--- 패밀리 사이트 ---</option>
+                            <option value="fs1">한국예술연구소</option>
+                            <option value="fs2">예술과젠더연구소</option>
+                            <option value="fs3">한국예술영제교육연구원</option>
+                        </select>
+                    </form>
+                </div>
+            </div>
+        </footer>
+    </body>
 </html>
