--- a/04_html+css/02_선택자/p101_타입선택자.html
+++ b/04_html+css/02_선택자/p101_타입선택자.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML+CSS</title>
+    <title>type 선택자</title>
     <style>
         /*
             선택자의 종류
@@ -15,17 +15,14 @@
         */
 
         /*
-            기본 선택자
-            1. element(type, tag) 선택자 - 태그 이름을 선택자로 사용
-            2. class 선택자 = .클래스이름
-            3. id 선택자 = #아이디이름
-            4. 그룹 선택자 = ,(콤마)
-            5. 전체 선택자 = *(별표)
+            타입 선택자
+            element(type, tag) 선택자 - 태그 이름을 선택자로 사용
+
         */
 
-        /* 본문(body)의 p태그를 선택하여 글자색을 빨강으로 지정한다. */
+        /* 본문(body)의 p태그를 선택하여 글자색을 파랑으로 지정한다. */
         p {
-            color: red;
+            color: blue;
         }
     </style>
 </head>
