--- a/70_pf/karts/index.html
+++ b/70_pf/karts/index.html
@@ -1,68 +1,74 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>한국종합예술학교</title>
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+
+        <!-- header -->
         <header>
             <h1 class="logo">
-                <a href="#"><img src="images/logo.png" alt="로고" /></a>
+                <a href="#"><img src="images/logo.png" alt="한국예술종합학교"></a>
             </h1>
             <nav>
                 <ul class="main">
-                    <a href="#"><li>학교소개</li></a>
-                    <a href="#"><li>예술사&#47;예술전문사</li></a>
-                    <a href="#"><li>대학생활</li></a>
-                    <a href="#"><li>알림&#47;참여</li></a>
+                    <li><a href="#">학교소개</a></li>
+                    <li><a href="#">예술사&#47;예술전문사</a></li>
+                    <li><a href="#">대학생활</a></li>
+                    <li><a href="#">알림&#47;참여</a></li>
                 </ul>
             </nav>
         </header>
+
+        <!-- slide -->
         <div class="slide">
             <ul>
                 <li>
                     <a href="#"
-                        ><img src="images/slide1.png" alt="슬라이드이미지1"
-                    /></a>
+                        ><img src="images/slide1.png" alt="한국화"></a>
                 </li>
                 <li>
                     <a href="#"
-                        ><img src="images/slide2.png" alt="슬라이드이미지2"
-                    /></a>
+                        ><img src="images/slide2.png" alt="배우"></a>
                 </li>
                 <li>
                     <a href="#"
-                        ><img src="images/slide3.png" alt="슬라이드이미지3"
-                    /></a>
+                        ><img src="images/slide3.png" alt="기술"></a>
                 </li>
             </ul>
-        </div>
+        </div><!-- div.slide end -->
+
+        <!-- contents -->
         <div class="contents">
+            
+            <!-- link -->
             <div class="link">
                 <a href="#">
-                    <img src="images/link1.png" alt="링크1">
+                    <img src="images/link1.png" alt="교내전화번호">
                     <span>교내전화번호</span>
                 </a>
                 <a href="#">
-                    <img src="images/link2.png" alt="링크2">
+                    <img src="images/link2.png" alt="오시는길">
                     <span>오시는 길</span>
                 </a>
                 <a href="#">
-                    <img src="images/link3.png" alt="링크3">
+                    <img src="images/link3.png" alt="입학정보">
                     <span>입학정보</span>
                 </a>
                 <a href="#">
-                    <img src="images/link4.png" alt="링크4">
+                    <img src="images/link4.png" alt="장학금">
                     <span>장학금</span>
                 </a>
                 <a href="#">
-                    <img src="images/link5.png" alt="링크5">
+                    <img src="images/link5.png" alt="학습관리시스템">
                     <span>학습관리시스템</span>
                 </a>
             </div>
 
+            <!-- banner -->
             <div class="banner">
                 <div class="cont">
                     <img src="images/banner.png" alt="배너">
@@ -76,28 +82,33 @@
                 </div>
             </div>
             
+            <!-- notice and gallery -->
             <div class="noga">
+
+                <!-- notice -->
                 <div class="notice">
                     <h2>공지사항</h2>
-                    <table>
-                        <tr>
-                            <td><a href="#">제22회 K'ARTS 전국무용경연대회 개최 알림</a></td>
-                            <td>2025.03.18</td>
-                        </tr>
-                        <tr>
-                            <td><a href="#">천장관(기숙사) 휴관 안내</a></td>
-                            <td>2024.11.15</td>
-                        </tr>
-                        <tr>
-                            <td><a href="#">K’ARTS 전국무용경연대회 예선 참가자 유의사항 안내</a></td>
-                            <td>2025.04.24</td>
-                        </tr>
-                        <tr>
-                            <td><a href="#">ISIC 국제학생증 카드 무료 발급 행사 안내</a></td>
-                            <td>2025.05.07</td>
-                        </tr>
-                    </table>
+                    <ul>
+                        <li>
+                            <a href="#">제22회 K'ARTS 전국무용경연대회 개최 알림</a>
+                            <span>2025.03.18</span>
+                        </li>
+                        <li>
+                            <a href="#">천장관(기숙사) 휴관 안내</a>
+                            <span>2024.11.15</span>
+                        </li>
+                        <li>
+                            <a href="#">K’ARTS 전국무용경연대회 예선 참가자 유의사항 안내</a>
+                            <span>2025.04.24</span>
+                        </li>
+                        <li>
+                            <a href="#">ISIC 국제학생증 카드 무료 발급 행사 안내</a>
+                            <span>2025.05.07</span>
+                        </li>
+                    </ul>
                 </div>
+
+                <!-- gallery -->
                 <div class="gallery">
                     <h2>갤러리</h2>
                     <div class="inner">
@@ -114,10 +125,15 @@
                             <span>연극원</span>
                         </a>
                     </div>
-                </div>
-            </div>
-        </div>
+                </div><!-- .gallery end -->
+            </div><!-- .noga end -->
+
+        </div><!-- .contents end -->
+
+        <!-- footer -->
         <footer>
+
+            <!-- address and copyright -->
             <div class="left">
                 <p>
                     <b>석관동캠퍼스</b> (02789) 서울특별시 성북구 화랑로32길
@@ -128,7 +144,10 @@
                     reserved.
                 </p>
             </div>
+
             <div class="right">
+
+                <!-- SNS -->
                 <div class="sns">
                     <ul>
                         <li>
@@ -148,6 +167,8 @@
                         </li>
                     </ul>
                 </div>
+
+                <!-- family site -->
                 <div class="fs">
                     <form action="#">
                         <select name="fs" id="fs">
