--- a/04_html+css/02_선택자/p109_형제선택자.html
+++ b/04_html+css/02_선택자/p109_형제선택자.html
@@ -6,27 +6,34 @@
     <title>HTML+CSS</title>
     <style>
         /*
-            그룹 선택자 > ~
-            선택자~선택자
+            선택자1 ~ 선택자2
+            형 ~ 모든 동생
         */
 
         /* h1 주변 p를 모두 선택 */
         h1 ~ p {
             color: red;
         }
+
+        h1 ~ ul {
+            color: blue;
+        }
     </style>
 </head>
 <body>
     <div class="abox">
-        <h1>h1은 div의 첫 번째 자식이다.</h1>
+        <h1>h1의 동생은 p 2개와 div</h1>
         <p>p는 h1의 첫 번째 동생이다.</p>
-        <p>p는 h1의 두 번째 동생이다.</p>
-        <ul><!-- h1의 세 번째 동생 -->
-            <li><p>p는 첫 번째 li의 자식, div의 손자이다.</p></li>
-            <li><p>p는 두 번째 li의 자식, div의 손자이다.</p></li>
-        </ul>
+        <div>나는 div이다.</div>
         <p>p는 h1의 세 번째 동생이다.</p>
-
+        <ul>
+            <li>
+                <p>Lorem ipsum dolor sit.</p>
+            </li>
+            <li>
+                <p>Lorem, ipsum dolor.</p>
+            </li>
+        </ul>
     </div>
     <p>p는 body의 자식이다.</p>
 </body>
