--- a/70_pf/dothome/kyowontour/index.html
+++ b/70_pf/dothome/kyowontour/index.html
@@ -7,6 +7,34 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="wrap">
+        <!-- 헤더 -->
+        <header>
+            <!-- 로고 -->
+            <h1 class="logo"><a href="#"><img src="images/logo.png" alt="여행이지"></a></h1>
+            <!-- 내비게이션 -->
+            <nav>
+                <ul>
+                    <li><a href="#">해외여행</a></li>
+                    <li><a href="#">국내여행</a></li>
+                    <li><a href="#">테마여행</a></li>
+                    <li><a href="#">맞춤여행</a></li>
+                </ul>
+        </header>
+        <!-- 콘텐츠 -->
+        <div class="contents"></div>
+        <!-- 슬라이드 -->
+        <div class="slide">
+            <ul>
+                <li><a href="#"><img src="images/slide1.png" alt="슬라이드이미지1"></a></li>
+                <!-- <li><a href="#"><img src="images/slide1.png" alt="슬라이드이미지1"></a></li>
+                <li><a href="#"><img src="images/slide1.png" alt="슬라이드이미지1"></a></li> -->
+
+            </ul>
+        </div>
+    </div>
+
+    <!-- 푸터 -->
+    <footer></footer>
 </body>
 </html>
