--- a/04_html+css/02_선택자/p117_가상클래스선택자.html
+++ b/04_html+css/02_선택자/p117_가상클래스선택자.html
@@ -4,27 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML+CSS</title>
+    <title>가상클래스선택자</title>
     <style>
-        /* :first-child와 같다 */
-        p:nth-child(1) {
-            color: magenta;
-        }
-
-        p {
-            background: lightgray;
-        }
-
-        /* p:nth-last-child, p:last-child */
-        p:nth-last-child(1) {
-            background: palegoldenrod;
-        }
-
-        /* nth-child(3) */
-        p:nth-last-child(2) {
-            color: red;
-        }
-
         /*
         
             ~child
@@ -42,6 +23,12 @@
             :only-of-type
 
         */
+
+        p {
+            background: lightgray;
+        }
+
+        
     </style>
 </head>
 
