--- a/04_html+css/02_선택자/p118_종속선택자.html
+++ b/04_html+css/02_선택자/p118_종속선택자.html
@@ -8,20 +8,29 @@
         /*
 
         /* 아이디 선택자 */
-        #atxt {color: red;}
+        /* #atxt {color: red;} */
 
         /* 종속 선택자 */
         /* p이면서 id가 atxt인 것 */
-        p#atxt {color: orange;}
+        /* p#atxt {color: orange;} */
         /* p이면서 class가 atxt인 것 */
-        p.atxt {color: green;}
+        /* p.atxt {color: green;} */
         /* id가 atxt이면서 class가 atxt인 것을 선택 */
-        #atxt.atxt {color: blue;}
+        /* #atxt.atxt {color: blue;} */
 
         /* 하위 선택자
         
         */
+        p.atxt {color: blueviolet;}
         p .atxt {color: aqua;}
+
+        /*
+        .atxt       class가 atxt 요소를 선택
+        p           p요소를 선택
+        p.atxt      p이면서 class가 atxt인 요소를 선택 -> 종속선택자
+        p .atxt     p 부모(조상)요소의 하위 요소 중에서 class가 atxt인 요소를 선택
+        
+        */
     </style>
 </head>
 <body>
