--- a/70_pf/dothome/kyowontour/index.html
+++ b/70_pf/dothome/kyowontour/index.html
@@ -35,6 +35,17 @@
     </div>
 
     <!-- 푸터 -->
-    <footer></footer>
+    <footer>
+        <!-- 하단로고 -->
+        <div class="blogo">
+            <a href="#"><img src="./images/blogo.png" alt="하단로고"></a>
+        </div>
+        <!-- 하단 메뉴, 주소 및 저작권 -->
+        <div class="center_cont">
+
+        </div>
+        <!-- 패밀리 사이트 -->
+        <div class="fs"></div>
+    </footer>
 </body>
 </html>
