--- a/70_pf/dothome/kyowontour/index.html
+++ b/70_pf/dothome/kyowontour/index.html
@@ -42,10 +42,12 @@
         </div>
         <!-- 하단 메뉴, 주소 및 저작권 -->
         <div class="center_cont">
-
+            듀
         </div>
         <!-- 패밀리 사이트 -->
-        <div class="fs"></div>
+        <div class="fs">
+            듀
+        </div>
     </footer>
 </body>
 </html>
