--- a/70_pf/dothome/kyowontour/index.html
+++ b/70_pf/dothome/kyowontour/index.html
@@ -22,7 +22,16 @@
                 </ul>
         </header>
         <!-- 콘텐츠 -->
-        <div class="contents"></div>
+        <div class="contents">
+            <!-- 배너 -->
+            <div class="banner"></div>
+            <!-- 공지사항 -->
+            <div class="notice"></div>
+            <!-- 갤러리 -->
+            <div class="gallery"></div>
+            <!-- 바로가기 링크 -->
+            <div class="link"></div>
+        </div><!-- .contents end -->
         <!-- 슬라이드 -->
         <div class="slide">
             <ul>
@@ -32,7 +41,7 @@
 
             </ul>
         </div>
-    </div>
+    </div><!-- //.wrap end -->
 
     <!-- 푸터 -->
     <footer>
@@ -42,11 +51,27 @@
         </div>
         <!-- 하단 메뉴, 주소 및 저작권 -->
         <div class="center_cont">
-            빵
+            <ul class="bmenu">
+                <li><a href="#">여행정보</a></li>
+                <li><a href="#">해외여행자보험</a></li>
+                <li><a href="#">홍보센터</a></li>
+                <li><a href="#">여행약관</a></li>
+                <li><a href="#">이용약관</a></li>
+                <li><a href="#">개인정보처리방침</a></li>
+            </ul>
+            <p>(주)교원투어 대표 : 장동하 서울특별시 종로구 청계천로 51-1, 교원투어 빌딩</p>
+            <p>copyrights 2022. all rights reserved by (주)교원투어</p>
         </div>
         <!-- 패밀리 사이트 -->
         <div class="fs">
-            빵
+            <form action="#">
+                <select name="fs" id="fs">
+                    <option value="">--- 패밀리 사이트 ---</option>
+                    <option value="fs1">교원그룹</option>
+                    <option value="fs2">교원 더스위트호텔</option>
+                    <option value="fs3">구몬학습</option>
+                </select>
+            </form>
         </div>
     </footer>
 </body>
