--- a/70_pf/dothome/kyowontour/index.html
+++ b/70_pf/dothome/kyowontour/index.html
@@ -23,14 +23,73 @@
         </header>
         <!-- 콘텐츠 -->
         <div class="contents">
+
             <!-- 배너 -->
-            <div class="banner"></div>
+            <div class="banner">
+                <div class="cont">
+                    <img src="images/banner.png" alt="배너">
+                    <div>
+                        <h2>여행이지라서 가능한 할인혜택!</h2>
+                        <p>여행지원+라이프케어서비스</p>
+                    </div>
+                </div>
+                <div class="btn">
+                    <a href="#"><img src="images/button.png" alt="바로가기버튼"></a>
+                </div>
+            </div>
             <!-- 공지사항 -->
-            <div class="notice"></div>
+            <div class="notice">
+                <h2>공지사항</h2>
+                <ul>
+                    <li>
+                        <a href="#">태국 입국 TDAC 작성 안내 </a>
+                        <span>2025-04-22</span>
+                    </li>
+                    <li>
+                        <a href="#">타임딜(튀르키예) 당첨자 공지 </a>
+                        <span>2025-04-22</span>
+                    </li>
+                    <li>
+                        <a href="#">라이브(스페인&포르투갈) 당첨자 공지 </a>
+                        <span>2025-04-21</span>
+                    </li>
+                </ul>
+            </div><!-- .//notice end -->
+
             <!-- 갤러리 -->
-            <div class="gallery"></div>
+            <div class="gallery">
+                <h2>갤러리</h2>
+                <div class="inner">
+                    <a href="#">
+                        <img src="images/gallery1.png" alt="갤러리1"><br>
+                        <span>함께 시드니</span>
+                    </a>
+                    <a href="#">
+                        <img src="images/gallery2.png" alt="갤러리2"><br>
+                        <span>장춘-백두산 4일</span>
+                    </a>
+                </div>
+            </div><!-- .//gallery end -->
+
             <!-- 바로가기 링크 -->
-            <div class="link"></div>
+            <div class="link">
+                <a href="#">
+                    <img src="images/lastgoods.png" alt="최근 본 상품">
+                    <span>최근 본 상품</span>
+                </a>
+                <a href="#">
+                    <img src="images/goods.png" alt="상품비교함">
+                    <span>상품비교함</span>
+                </a>
+                <a href="#">
+                    <img src="images/favorite.png" alt="관심상품">
+                    <span>관심상품</span>
+                </a>
+                <a href="#">
+                    <img src="images/callnumber.png" alt="전화번호안내">
+                    <span>전화번호 안내</span>
+                </a>
+            </div><!-- .//link end -->
         </div><!-- .contents end -->
         <!-- 슬라이드 -->
         <div class="slide">
