--- a/04_html+css/06_display/01_display.html
+++ b/04_html+css/06_display/01_display.html
@@ -44,6 +44,23 @@
             */
             display: inline;
         }
+
+        .gnb li a {
+            display: inline-block;
+            /* 인라인요소는 width, height 적용되지 않음 */
+            background: brown;
+            color: #fff;
+            text-decoration: none;
+            width: 200px;
+            height: 35px;
+            text-align: center;
+            
+        }
+
+        .gnb li a:hover {
+            text-decoration: underline;
+            background: #369;
+        }
     </style>
 </head>
 <body>
