--- a/70_pf/dothome/nongshim/index.html
+++ b/70_pf/dothome/nongshim/index.html
@@ -42,10 +42,36 @@
                     <li><a href="#"><img src="images/slide1.jpg" alt="슬라이드 이미지1"></a></li>
                 </ul>
             </div><!-- //.slide end -->
+            <!-- 바로가기 링크 -->
+            <div class="link">
+                <ul>
+                    <li><a href="#"><img src="images/link1.png" alt="링크1"><span>사회공헌</span></a></li>
+                    <li><a href="#"><img src="images/link2.png" alt="링크2"><span>소비자중심경영</span></a></li>
+                    <li><a href="#"><img src="images/link3.png" alt="링크3"><span>동반성장</span></a></li>
+                </ul>
+            </div>
             <!-- 배너 -->
-            <div class="banner"></div>
+            <div class="banner">
+                <div class="cont">
+                    <img src="images/banner.jpg" alt="배너이미지">
+                    <h2>중국 현지인을 감동시킨 농심의 매운 맛</h2>
+                    <p>품질에 대한 자부심을 바탕으로 중국 전역에 농심의 맛 그대로 프리미엄 이미지를 뿌리내리고 있습니다.</p>
+                </div>
+                <div class="btn">
+                    <a href="#"><img src="images/btn.png" alt="배너버튼"></a>
+                </div>
+
+            </div>
             <!-- 공지사항 및 갤러리 -->
-            <div class="tabs"></div>
+            <div class="tabs">
+                <h2>공지사항</h2>
+                <ul>
+                    <li><a href="#"><h3>농심 신라면 툼바, 일본서 초도물량 100만 개 완판</h3><span>2025.05.14</span></a></li>
+                    <li><a href="#"><h3>농심, 감자칩 스낵 ‘크레오파트라 솔트앤김’ 출시</h3><span>2025.05.08</span></a></li>
+                    <li><a href="#"><h3>농심, ‘너구리 다시마의 고장’ 완도 장보고수산물축제 참가</h3><span>2025.05.06</span></a></li>
+                    <li><a href="#"><h3>농심, 페루 마추픽추에 ‘신라면 분식’ 1호점 오픈</h3><span>2025.04.28</span></a></li>
+                </ul>
+            </div>
         </div><!-- //.container end -->
     </div><!-- //.wrap end -->
 
