--- a/70_pf/dothome/nongshim/index.html
+++ b/70_pf/dothome/nongshim/index.html
@@ -54,8 +54,10 @@
             <div class="banner">
                 <div class="cont">
                     <img src="images/banner.jpg" alt="배너이미지">
-                    <h2>중국 현지인을 감동시킨 농심의 매운 맛</h2>
-                    <p>품질에 대한 자부심을 바탕으로 중국 전역에 농심의 맛 그대로 프리미엄 이미지를 뿌리내리고 있습니다.</p>
+                    <div>
+                        <h2>중국 현지인을 감동시킨 농심의 매운 맛</h2>
+                        <p>품질에 대한 자부심을 바탕으로 중국 전역에 농심의 맛 그대로 프리미엄 이미지를 뿌리내리고 있습니다.</p>
+                    </div>
                 </div>
                 <div class="btn">
                     <a href="#"><img src="images/btn.png" alt="배너버튼"></a>
