--- a/04_html+css/08_animation/01_animation.html
+++ b/04_html+css/08_animation/01_animation.html
@@ -13,11 +13,18 @@
                     (@keyframes 애니메이션이름 과 일치)
                 animation-duration: 동작시간; -> 단위: s; (초)
                     ex) animation-duration: 1s; -> 1초
-
-
+                animation-direction: 방향;
+                    normal(기본값)      정방향
+                    reverse             역방향
+                    alternate           양방향
+                    alternate-reverse   
+                animation-delay: 지연시간;
+                animation-timing-function: 가속도;
+                animation-fill-mode: forwards;
 
             속기 속성
-                animation
+                animation: name duration [count] [direction] [delay] [timing-function] [fill-mode] [play state];
+
             
             animation
             요소가 한 스타일에서 다른 스타일로 점진적으로 변경할 수 있도록 한다.
@@ -36,9 +43,37 @@
                 100% {속성: 값; ...}
             }
         */
+
+        .div1 {
+            position: absolute;
+            width: 100px;
+            height: 100px;
+            background: coral;
+            animation-name: right_move;
+            animation-duration: 2s;
+            /* animation-direction: alternate; */
+            /* animation-timing-function: linear; */
+            /* animation-iteration-count: 2; */
+            animation-fill-mode: forwards;
+        }
+
+        @keyframes right_move {
+            /* 시작 */
+            from {left:0}
+            /* 종료 */
+            to {left:500px}
+        }
+
+        @keyframes right_move2 {
+            /* 시작 */
+            0% {left:0}
+            50% {left:1000px}
+            /* 종료 */
+            100% {left:0}
+        }
     </style>
 </head>
 <body>
-    
+    <div class="div1"></div>
 </body>
 </html>
