--- a/70_pf/dothome/bluebottle/index.html
+++ b/70_pf/dothome/bluebottle/index.html
@@ -23,6 +23,7 @@
             </ul>
         </nav>
     </header>
+
     <div class="container">
         <!-- B: slide -->
         <div class="slide">
@@ -38,10 +39,10 @@
             <div class="notice">
                 <h2>공지사항</h2>
                 <ul>
-                    <li><a href="#">부산 기장 카페 오픈</a> <span>2025.04.30</span></li>
-                    <li><a href="#">마리메꼬 x 블루보틀</a> <span>2025.04.15</span></li>
-                    <li><a href="#">설 연휴 영업 시간 안내</a> <span>2025.01.01</span></li>
-                    <li><a href="#">부산 민락 카페 오픈</a> <span>2024.11.15</span></li>
+                    <li><a href="#">부산 기장 카페 오픈</a><span>2025.04.30</span></li>
+                    <li><a href="#">마리메꼬 x 블루보틀</a><span>2025.04.15</span></li>
+                    <li><a href="#">설 연휴 영업 시간 안내</a><span>2025.01.01</span></li>
+                    <li><a href="#">부산 민락 카페 오픈</a><span>2024.11.15</span></li>
                 </ul>
             </div>
             <div class="gallery">
@@ -57,14 +58,15 @@
                         <img src="images/image3.png" alt="갤러리3"><br>
                     </a>
                 </div>
-            </div><!-- gallery end -->
+            </div><!-- .gallery end -->
             <div class="link">
                 <a href="#">
                     <img src="images/link.png" alt="바로가기">
                 </a>
             </div>
-        </div>
-    </div>
+        </div><!-- .contents end -->
+    </div><!-- .container end -->
+
     <!-- D: footer -->
     <footer>
         <div class="copy">
@@ -92,7 +94,7 @@
                     </select>
                 </form>
             </div>
-        </div>
+        </div><!-- .sns_fs end -->
     </footer>
 </body>
 
