--- a/70_pf/dothome/bluebottle/index.html
+++ b/70_pf/dothome/bluebottle/index.html
@@ -11,17 +11,43 @@
 <body>
     <!-- A: header -->
     <header>
-        <h1 class="logo">
-            <a href="#"><img src="images/logo.png" alt="블루보틀"></a>
-        </h1>
-        <nav>
-            <ul class="main">
-                <li><a href="#">쇼핑</a></li>
-                <li><a href="#">베스트셀러</a></li>
-                <li><a href="#">세트</a></li>
-                <li><a href="#">카페</a></li>
-            </ul>
-        </nav>
+        <div class="inner">
+            <h1 class="logo">
+                <a href="#"><img src="images/logo.png" alt="블루보틀"></a>
+            </h1>
+            <nav>
+                <ul class="main">
+                    <li><a href="#">쇼핑</a>
+                        <ul class="sub">
+                            <li><a href="#">서브메뉴1</a></li>
+                            <li><a href="#">서브메뉴2</a></li>
+                            <li><a href="#">서브메뉴3</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">베스트셀러</a>
+                        <ul class="sub">
+                            <li><a href="#">서브메뉴1</a></li>
+                            <li><a href="#">서브메뉴2</a></li>
+                            <li><a href="#">서브메뉴3</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">세트</a>
+                        <ul class="sub">
+                            <li><a href="#">서브메뉴1</a></li>
+                            <li><a href="#">서브메뉴2</a></li>
+                            <li><a href="#">서브메뉴3</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">카페</a>
+                        <ul class="sub">
+                            <li><a href="#">서브메뉴1</a></li>
+                            <li><a href="#">서브메뉴2</a></li>
+                            <li><a href="#">서브메뉴3</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </div><!-- .inner e -->
     </header>
 
     <div class="container">
@@ -69,32 +95,34 @@
 
     <!-- D: footer -->
     <footer>
-        <div class="copy">
-            <p>서울특별시 성동구 아차산로 7(성수동 1가)</p>
-            <p>개인정보관리책임자:임홍주 사업자등록번호: 155-81-01195</p>
-            <p>© 2023 BLUE BOTTLE COFFEE INC., ALL RIGHTS RESERVED</p>
+        <div class="inner">
+            <div class="copy">
+                <p>서울특별시 성동구 아차산로 7(성수동 1가)</p>
+                <p>개인정보관리책임자:임홍주 사업자등록번호: 155-81-01195</p>
+                <p>© 2023 BLUE BOTTLE COFFEE INC., ALL RIGHTS RESERVED</p>
+            </div>
+            <div class="sns_fs">
+                <div class="sns">
+                    <ul>
+                        <li><a href="#">페이스북</a>|</li>
+                        <li><a href="#">트위터</a>|</li>
+                        <li><a href="#">인스타그램</a>|</li>
+                        <li><a href="#">블로그</a></li>
+                    </ul>
+                </div>
+                <div class="fs">
+                    <form action="#">
+                        <select name="fs" id="fs">
+                            <option value="">전국 지점 목록</option>
+                            <option value="">블루보틀 부산 기장</option>
+                            <option value="fs1">블루보틀 부산 민락</option>
+                            <option value="fs2">블루보틀 삼성</option>
+                            <option value="fs3">블루보틀 휴먼메이드서울</option>
+                        </select>
+                    </form>
+                </div>
+            </div><!-- .sns_fs end -->
         </div>
-        <div class="sns_fs">
-            <div class="sns">
-                <ul>
-                    <li><a href="#"><img src="images/facebook.png" alt="페이스북"></a></li>
-                    <li><a href="#"><img src="images/kakaotalk.png" alt="카카오톡"></a></li>
-                    <li><a href="#"><img src="images/youtube.png" alt="유튜브"></a></li>
-                    <li><a href="#"><img src="images/blog.png" alt="블로그"></a></li>
-                </ul>
-            </div>
-            <div class="fs">
-                <form action="#">
-                    <select name="fs" id="fs">
-                        <option value="">전국 지점 목록</option>
-                        <option value="">블루보틀 부산 기장</option>
-                        <option value="fs1">블루보틀 부산 민락</option>
-                        <option value="fs2">블루보틀 삼성</option>
-                        <option value="fs3">블루보틀 휴먼메이드서울</option>
-                    </select>
-                </form>
-            </div>
-        </div><!-- .sns_fs end -->
     </footer>
 </body>
 
