--- a/05_html+cs+jss/06_데이터타입.html
+++ b/05_html+cs+jss/06_데이터타입.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>데이터타입</title>
 </head>
+
 <body>
     <script>
         /*
             데이터타입
-                1. 숫자(number)
-                2.
+                1. 원시(primitive)
+                    숫자(num): 10
+                    문자열(string): '문자'
+                    불(Boolean): true,false
+                    undifined: 정의하지 않은 값 > 값을 할당하지 않을 때
+                    null: 비어있는 값
+                    ...
+
+                2. 참조(refernece)
+                    객체(object)    {}
+                    배열(array)     []
+                    함수(function)  function(){}
+                    ...
+
+                    사용자가 직접 참조데이터를 만들어 사용할 수 있다.
         */
         var num1 = 10; // 정수
         var num2 = 10.5; // 소수
@@ -19,8 +34,64 @@
         console.log(num1);
         console.log(num2);
         console.log(num3);
-        
+
         console.log(num1 + num3 - num2);
+
+        var str1 = '문자';
+        var str2 = "문자";
+        var str3 = "10"; /* 숫자가 아닌 문자 10 */
+
+        console.log("str1=" + str1);
+        console.log("str2=" + str2);
+        console.log("str3=" + str3);
+        //덧셈의 더하기가 아니라 앞,뒤 문자열을 연결시켜준다.
+
+        // "" 또는 '' 출력
+        var str4 = '문자는\t "문자"';
+        var str5 = "문자는 '문자'";
+
+        // 이스케이프 문자
+        var str6 = '문자는\\ \'문자\'';
+        var str7 = '문자는\n \'문자\'';
+
+        // alert('자바스크립트\n제이쿼리');
+
+        document.write(str4 + '<br>')
+        document.write(str5 + '<br>')
+        document.write(str6 + '<br>')
+        document.write(str7 + '<br>')
+
+        var boo1 = (5 > 4);
+        var boo2 = (5 < 4);
+
+        document.write(boo1);
+        document.write('<br>');
+        document.write(boo2);
+        document.write('<br>');
+
+        var boo3 = 0;
+        var boo4 = 1;
+
+        // 객체지향 프로그래밍 언어
+        // 객체, 클래스, 생성자, 함수, 매서드, 속성 ...
+        // Boolean(데이터) -> 데이터를 불 값으로 생성한다.
+        document.write(Boolean(boo3));
+        document.write('<br>');
+        document.write(Boolean(boo4));
+
+
+        //변수 선언 후 값을 할당하지 않았ㅇ르 때
+        var temp1;
+        document.write('<br>');
+        document.write(temp1);
+
+        //객체 데이터는 {}로 표기한다.
+        var obj = {};
+        obj.name = '홍길동';
+        dbj.age;
+        document.write('<br>');
+        document.write(obj);
     </script>
 </body>
+
 </html>
