--- a/70_pf/dothome/nongshim/index.html
+++ b/70_pf/dothome/nongshim/index.html
@@ -36,12 +36,14 @@
 
         <!-- 오른쪽 영역 -->
         <div class="container">
-            <!-- 슬라이드 이미지 -->
-            <div class="slide">
+            <!-- fade 이미지 -->
+            <div class="fade">
                 <ul>
                     <li><a href="#"><img src="images/slide1.jpg" alt="슬라이드 이미지1"></a></li>
+                    <li><a href="#"><img src="images/slide2.jpg" alt="슬라이드 이미지2"></a></li>
+                    <li><a href="#"><img src="images/slide3.jpg" alt="슬라이드 이미지3"></a></li>
                 </ul>
-            </div><!-- //.slide end -->
+            </div><!-- //.fade end -->
             <!-- 바로가기 링크 -->
             <div class="link">
                 <ul>
