--- a/05_html+cs+jss/08_연산자.html
+++ b/05_html+cs+jss/08_연산자.html
@@ -14,7 +14,14 @@
             비교: > < >= <=
             비교: == === 같다.
             비교: != !== 같지 않다.
-            대입(할당): = 
+            논리: &&(그리고), ||(또는), !(아니다)
+            대입(할당): =
+            비트: &, |, ~, ^, <<, >>, ...
+            삼향: 피연산자1 ? 피연산자2: 피연산자3 ->if문
+            typeof
+
+            비교 연산의 결과는 true 또는 false 이다.
+            논리 연산의 결과는 true 또는 false 이다.
         */
     </script>
 </body>
