--- a/04_html+css/10_flexbox/01_flex.html
+++ b/04_html+css/10_flexbox/01_flex.html
@@ -9,12 +9,15 @@
         .flexbox {
             display: flex;
             flex-direction: row;
+            align-items: stretch;
             height: 200px;
             background: #ccc;
         }
 
         .flexbox div {
-            flex: 1;
+            width: 200px; /* flex: 0 1 auto; */
+            flex: 200px; /* flex: 1 1 200px; */
+            flex: 200; /* flex: 200 1 0%; */
             background: darkcyan;
             margin: 10px;
         }
@@ -49,7 +52,23 @@
             align-content:    주축
             align-self:       주축
 
-        */
+            개별속성
+            flex-grow
+                0 늘어나지 않음
+                1 늘어남
+            flex-shrink
+                0 줄어들지않음
+                1 줄어듬
+            flex-basis
+                auto 가로 크기의 초기값
+
+            속기속성 > 순서가 있다.
+            flex: grow [shrink] [basis]; grow, shrink 단위 없음
+            flex: [grow] [shrink] basis; 단위쓰면 basis
+            flex: 1;
+            flex: 1 1 0%;
+            flex: 늘어남유무 [줄어듬유무] [가로크기의초기값];
+            */
     </style>
 </head>
 
